# wattlas

./: .env.example  .gitignore  Makefile  PROJECT_CONTEXT.md  README.md  product-facts.md
design/: brand-spec.md
pipeline/: pyproject.toml
pipeline/src/grid_scope/: __init__.py  canonicalize.py  cli.py  config.py  demand.py  generator_artifacts.py  models.py  population.py  power_balance.py  power_plants.py  publisher.py  regional_demand.py  scoring.py  snapshot_builder.py  storage.py
pipeline/src/grid_scope/connectors/: __init__.py  base.py  curated.py  eia.py  ember.py  entsoe.py  eurostat.py  gem_power.py  geoboundaries.py  gisco.py  global_assets.py  licensing.py  osm_infrastructure.py  osm_power.py  regional_electricity.py  un_geodata.py  un_salb.py  world_bank.py  worldpop.py  wri_power.py
pipeline/tests/: test_canonicalize.py  test_cli.py  test_connectors.py  test_demand.py  test_models.py  test_population.py  test_power_balance.py  test_power_plants.py  test_publisher.py  test_regional_demand.py  test_regional_electricity.py  test_scoring.py  test_snapshot_builder.py
pipeline/tests/fixtures/: admin1-dateline.geojson  admin1-small.geojson  eia-generation-hierarchy-sample.json  eia-generation-sector99-sample.json  eia-state-sample.json  ember-yearly-full-sample.csv  ember-yearly-sample.csv  gem-power-real-headers-sample.csv  gem-power-sample.csv  qlever-osm-infrastructure-sample.json  qlever-osm-power-sample.json  un-geodata-sample.geojson  un-salb-sample.geojson  worldpop-tiny.tif  wri-power-sample.json
scripts/: build-admin1-population.py  (+4 more)
(+285 files in other folders)
